--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Descarga los parámetros óptimos</h2>
                     <p>Puedes descargar gratis un PDF con los parámetros óptimos para tu acuario de agua salada o dulce.</p>
-                    <a href="https://www.dropbox.com/s/35n55fho1gtzg72/BP%20FTA.pdf?dl=1" class="btn btn-default btn-lg">¡Lo quiero!</a>
+                    <a href="https://www.dropbox.com/s/xidwkd1q15pvx9h/Parametros%20de%20agua%20salada%20y%20dulce.pdf?dl=1" class="btn btn-default btn-lg">¡Lo quiero!</a>
                 </div>
             </div>
         </div>
