--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     	<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style>
 
     	<div class='embed-container' id='google-maps'>
-    		<iframe src='https://www.google.com/maps/embed?pb=!1m18!1m8!1m3!1d7571.664086290391!2d-66.0894413!3d18.4004937!3m2!1i1024!2i768!4f13.1!4m7!1i0!3e2!4m0!4m3!3m2!1d18.3991601!2d-66.0905786!5e0!3m2!1sen!2spr!4v1427873196860' width='600' height='450' frameborder='0' style='border:0'></iframe>
+    		<iframe src="https://www.google.com/maps/embed?pb=!1m22!1m12!1m3!1d7571.736251988815!2d-66.08985672701796!3d18.39885207740637!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m7!1i0!3e6!4m0!4m3!3m2!1d18.3968494!2d-66.08913869999999!5e0!3m2!1sen!2spr!4v1427892980867" width="600" height="450" frameborder="0" style="border:0"></iframe>
     	</div>
     </section>
 
